--- a/index.html
+++ b/index.html
@@ -43,20 +43,9 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
 
     
-    <center><h1 style="font-size: 4em;">❀ An Educational Website on Computer Parts ❀</h1></center>
+    <center><h1 style="font-size: 4em;">An Educational Website on Computer Parts </h1></center>
             
 <section class="home"">
     <div class="row2">
