--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
 <div class="container">
  <div class="content">
-<img src="Logo.png" class="logo">
+<img src="logo2.png" class="logo">
   <hr>
+  <h1>Learn About <br>The Parts<br> Of a Computer.</h1>
  </div>
 
 </div>
