--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
  <div class="content">
 <img src="logo2.png" class="logo">
   <hr>
+     <div class="container2">
+         <nav>
+             <ul>
+                 <li><a href="#">Home</a></li>
+                 <li><a href="#">Components</a></li>
+                 <li><a href="#">Summary</a></li>
+             </ul>
+         </nav>
+     </div>
   <h1>Learn About <br>The Parts<br> Of a Computer.</h1>
+     <h3>Welcome to PC Parts Explained!</h3>
+<p> Computers are an essential part of modern life, but have you ever wondered how they work? PC Parts Explained is designed to provide a comprehensive understanding of computer components, their roles, and how they work together to power your device.</p>
+     <br>
+     <h3>What will you find here?</h3>
+     <br>🌐--Detailed Descriptions.
+     <br>🌐--High-Quality Images.
+     <br>🌐--Informative videos.
  </div>
+<div class="sidebar">
 
+    
+</div>
 </div>
 
   </body>
