--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <link rel="stylesheet" href="style.css">
  <meta charset="utf-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie:regular" rel="stylesheet" />
  <link href="https://fonts.googleapis.com/css?family=Playwrite+AU+SA:100,200,300,regular" rel="stylesheet" />
  <title>PC Parts Explained</title>
