--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
      <br>🌐--High-Quality Images.
      <br>🌐--Informative videos.
  </div>
-<div class="sidebar">
-
-    
+<div class="sidebar">    
 </div>
 </div>
 
+ <br>
+  <h3>Want a sneak peek of what you will see on this page?</h3>
+ <h2>Well, here it is:</h2>
+  <img src="ComputerParts.png" alt="PC Parts">
   </body>
 </html>
