--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
      <div class="container2">
          <nav>
              <ul>
-                 <li><a href="#">Home</a></li>
-                 <li><a href="#">Components</a></li>
+                 <li><a href="index.html">Home</a></li>
+                 <li><a href="components.html">Components</a></li>
                  <li><a href="#">Summary</a></li>
              </ul>
          </nav>
