--- a/components.html
+++ b/components.html
@@ -25,6 +25,8 @@
          </nav>
      </div>
  <center><h1>The Different components.</h1></center>
+     <div class="content1">
+         <h3 style="color: white;"><b>Cases and form factors?</b></h3></div>
  </div>
 <div class="sidebar">    
 </div>
