--- a/components.html
+++ b/components.html
@@ -24,7 +24,7 @@
              </ul>
          </nav>
      </div>
- <center><h1>The Different components.</h1></center>
+ <h1>The Different components.</h1>
      <div class="content1">
          <h3 style="color: white;"><b>Cases and form factors?</b></h3></div>
  </div>
