--- a/components.html
+++ b/components.html
@@ -25,23 +25,23 @@
          </nav>
      </div>
  <h1>The Different components.</h1>
-     <div class="content1">
-          <h3 style="color: white;"><b>Cases and form factors.</b></h3></div>
-     <div class="content2">
+     <a href="#"><div class="content1">
+          <h3 style="color: white;"><b>Cases and form factors.</b></h3></div></a>
+   <a href="#"> <div class="content2">
           <h3 style="color: white;"><b>Motherboards
-          </b></h3></div>
-     <div class="content3">
-          <h3 style="color: white;"><b> BIOS/UEFI</b></h3></div>
-     <div class="content4">
-          <h3 style="color: white;"><b> Memory</b></h3></div>
-     <div class="content5">
-          <h3 style="color: white;"><b>Processors (CPUs)</b></h3></div>
-     <div class="content6">
-          <h3 style="color: white;"><b>Video and Expansion Cards</b></h3></div>
-     <div class="content7">
-           <h3 style="color: white;"><b>Cooling</b></h3></div>
-     <div class="content8">
-           <h3 style="color: white;"><b>Power Supply</b></h3></div>
+          </b></h3></div></a>
+     <a href="#"><div class="content3">
+          <h3 style="color: white;"><b> BIOS/UEFI</b></h3></div></a>
+     <a href="#"><div class="content4">
+          <h3 style="color: white;"><b> Memory</b></h3></div></a>
+     <a href="#"><div class="content5">
+          <h3 style="color: white;"><b>Processors (CPUs)</b></h3></div></a>
+     <a href="#"><div class="content6">
+          <h3 style="color: white;"><b>Video and Expansion Cards</b></h3></div></a>
+     <a href="#"><div class="content7">
+           <h3 style="color: white;"><b>Cooling</b></h3></div></a>
+     <a href="#"><div class="content8">
+           <h3 style="color: white;"><b>Power Supply</b></h3></div></a>
  </div>
 <div class="sidebar">    
 </div>
