--- a/components.html
+++ b/components.html
@@ -24,24 +24,43 @@
              </ul>
          </nav>
      </div>
- <h1>The Different components.</h1>
-     <a href="#"><div class="content1">
-          <h3 style="color: white;"><b>Cases and form factors.</b></h3></div></a>
-   <a href="#"> <div class="content2">
-          <h3 style="color: white;"><b>Motherboards
-          </b></h3></div></a>
-     <a href="#"><div class="content3">
-          <h3 style="color: white;"><b> BIOS/UEFI</b></h3></div></a>
-     <a href="#"><div class="content4">
-          <h3 style="color: white;"><b> Memory</b></h3></div></a>
-     <a href="#"><div class="content5">
-          <h3 style="color: white;"><b>Processors (CPUs)</b></h3></div></a>
-     <a href="#"><div class="content6">
-          <h3 style="color: white;"><b>Video and Expansion Cards</b></h3></div></a>
-     <a href="#"><div class="content7">
-           <h3 style="color: white;"><b>Cooling</b></h3></div></a>
-     <a href="#"><div class="content8">
-           <h3 style="color: white;"><b>Power Supply</b></h3></div></a>
+ <div class="page-container">
+     <div class="components-nav">
+        <h2>Components</h2>
+        <a href="#cases" class="component-link">
+            <div class="component-box">Cases and Form Factors</div>
+        </a>
+        <a href="#motherboards" class="component-link">
+            <div class="component-box">Motherboards</div>
+        </a>
+        <a href="#bios" class="component-link">
+            <div class="component-box">BIOS/UEFI</div>
+        </a>
+        <a href="#memory" class="component-link">
+            <div class="component-box">Memory</div>
+        </a>
+        <a href="#cpu" class="component-link">
+            <div class="component-box">Processors (CPUs)</div>
+        </a>
+        <a href="#video" class="component-link">
+            <div class="component-box">Video Cards</div>
+        </a>
+        <a href="#cooling" class="component-link">
+            <div class="component-box">Cooling</div>
+        </a>
+        <a href="#power" class="component-link">
+            <div class="component-box">Power Supply</div>
+        </a>
+     </div>
+     <div class="component-content">
+        <h1>Computer Components</h1>
+        <div id="cases">
+            <h2>Cases and Form Factors</h2>
+            <p>Content about cases will appear here...</p>
+        </div>
+        <!-- Other sections will be populated with actual content -->
+     </div>
+ </div>
  </div>
 <div class="sidebar">    
 </div>
