--- a/components.html
+++ b/components.html
@@ -55,8 +55,14 @@
      <div class="component-content">
         <h1>Computer Components</h1>
         <div id="cases">
-            <h2>Cases and Form Factors</h2>
-            <p>Content about cases will appear here...</p>
+            <h2>Directions:</h2>
+           <ul>
+            <li>Look for the components navigation bar on the right.</li>
+            <li>Press on the one you want to learn about.</li>
+            <li>Have an amazing experience learning about the different components of computers!</li>
+           </ul>
+         <h3>Don't worry, you don't have to come back here if you want to learn about something else!
+         The components menu bar will always be on the right side.</h3>
         </div>
         <!-- Other sections will be populated with actual content -->
      </div>
