--- a/components.html
+++ b/components.html
@@ -27,7 +27,7 @@
  <div class="page-container">
      <div class="components-nav">
         <h2>Components</h2>
-        <a href="#cases" class="component-link">
+        <a href="casesandFF.html" class="component-link">
             <div class="component-box">Cases and Form Factors</div>
         </a>
         <a href="#motherboards" class="component-link">
