--- a/casesandFF.html
+++ b/casesandFF.html
@@ -55,8 +55,9 @@
             <h1>Cases and Form Factors</h1>
             <div class="info-section">
                 <h2>Introduction</h2>
-                <p>Motherboard form factor standards help ensure that computer components can be interchangeable among vendors and generations of technology. Understanding form factors is crucial when customizing and upgrading systems.</p>
-                
+<p>Motherboard form factor standards help ensure that computer components can be interchangeable among vendors and generations of technology. Knowledge of the form factors are important when you customize and upgrade systems.</p>    
+             <p>Form factors evolve slowly in response to changing demands of the computer market. The following graphic and table describe the characteristics of the most common motherboard form factors.
+</p>
                 <img src="Casesandfactors.png" alt="Cases and Form Factors" class="section-image">
                 
                 <h2>What Determines a Form Factor?</h2>
@@ -70,10 +71,12 @@
                     </ul>
                 </div>
 
-                <h2>Common Form Factors</h2>
+                <h2>Common Form Factors and their Characteristics</h2>
                 <div class="form-factor-card">
                     <h3>ATX (Advanced Technology Extended)</h3>
-                    <p>The most popular form factor with several versions. All ATX versions share:</p>
+                    <p>The ATX form factor is the most used form factor. Because of its popularity, there are several versions of the ATX form factor. Each version has a different specification for dimension and number of expansion slots.
+</p>
+                 <p>All ATX versions share the following characteristics:</p>
                     <ul>
                         <li>Back plate measurements (6.25" × 1.75")</li>
                         <li>24-pin ATX power connector</li>
@@ -83,9 +86,8 @@
                         <li>Standardized mounting hole locations</li>
                         <li>CPU location (top of board near power supply)</li>
                     </ul>
-                </div>
-
-                <div class="form-factor-card">
+                 <h3>The different versions include:</h3>
+                    <div class="form-factor-card">
                     <h3>Standard ATX</h3>
                     <ul>
                         <li>Measures 12" × 9.6"</li>
