--- a/motherboards.html
+++ b/motherboards.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <link rel="stylesheet" href="components.css">
+ <link rel="stylesheet" href="motherboards.css">
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie:regular" rel="stylesheet" />
@@ -30,7 +30,7 @@
         <a href="casesandFF.html" class="component-link">
             <div class="component-box">Cases and Form Factors</div>
         </a>
-        <a href="#motherboards" class="component-link">
+        <a href="motherboards.html" class="component-link">
             <div class="component-box">Motherboards</div>
         </a>
         <a href="#bios" class="component-link">
