--- a/components.html
+++ b/components.html
@@ -30,7 +30,7 @@
         <a href="casesandFF.html" class="component-link">
             <div class="component-box">Cases and Form Factors</div>
         </a>
-        <a href="#motherboards" class="component-link">
+        <a href="motherboards.html" class="component-link">
             <div class="component-box">Motherboards</div>
         </a>
         <a href="#bios" class="component-link">
