--- a/motherboards.html
+++ b/motherboards.html
@@ -155,6 +155,7 @@ Selecting a motherboard with integrated devices is typically cheaper than buying
                     </ul>
                 </div>
                     <div class="form-factor-card">
+                     <h2>CMOS Battery</h2>
 <p>The CMOS battery keeps the accurate date and time, even when the motherboard has no power. In older motherboards, the CMOS battery also retained BIOS configuration settings, which were stored in volatile memory called the CMOS chip.
 </p>
                 </div>
