--- a/casesandFF.html
+++ b/casesandFF.html
@@ -29,7 +29,7 @@
             <a href="casesandFF.html" class="component-link">
                 <div class="component-box">Cases and Form Factors</div>
             </a>
-            <a href="#motherboards" class="component-link">
+            <a href="motherboards.html" class="component-link">
                 <div class="component-box">Motherboards</div>
             </a>
             <a href="#bios" class="component-link">
@@ -112,36 +112,49 @@
                         <li>Compatible with ATX cases</li>
                     </ul>
                 </div>
-
+                </div>
                 <div class="form-factor-card">
-                    <h3>ITX Form Factors</h3>
-                    <p>Designed for low-power, small form factor (SFF) computers:</p>
-                    <ul>
-                        <li>Mini-ITX (6.7" × 6.7")</li>
-                        <li>Nano-ITX (4.7" × 4.7")</li>
-                        <li>Pico-ITX (3.9" × 2.85")</li>
-                        <li>Mobile-ITX (2.9" × 1.7")</li>
+<h2>Information Technology EXtended
+(ITX)</h2>                
+<p>The ITX form factor was designed for low-power, small form factor (SFF) computers. The most common ITX form factor is the Mini-ITX form factor.</p>  
+                 <br>
+                 <p>Mini-ITX form factor:</p>
+                 <ul>
+                  <li>Specifies a maximum motherboard size of 6.7" × 6.7"</li>
+<li>Has only one expansion slot</li>
+<li>Allows for small (100 watt) power supplies</li>
+<li>Is typically used with a home theater PC (HTPC)</li>
+                    </ul>
+                <p>Other ITX form factors include the following:</p>
+                   <ul>
+                  <li>SNano-ITX (4.7" × 4.7")</li>
+<li>Pico-ITX (3.9" × 2.85")</li>
+<li>Mobile-ITX (2.9" × 1.7")</li>
+                   </ul>
+                </div>
+
+              <div class="form-factor-card">
+                   <h2>New Low Profile Extended (NLX)</h2>
+<p>NLX is an old form factor that was designed for use in slimline desktop computers.</p>    
+               <br>
+               <p>NLX form factor:</p>
+               <ul>
+                        <li>Uses a detachable riser card to provide expansion slots (the motherboard itself has no expansion slots)</li>
+<li>Allows the motherboard to slide in or out of the system case easily</li>
+<li>Was replaced by microATX and Mini-ITX</li>
                     </ul>
                 </div>
 
-                <div class="form-factor-card">
-                    <h3>NLX (New Low Profile Extended)</h3>
-                    <ul>
-                        <li>Uses detachable riser card for expansion slots</li>
-                        <li>Easy motherboard installation/removal</li>
-                        <li>Replaced by microATX and Mini-ITX</li>
-                    </ul>
-                </div>
-
-                <div class="form-factor-card">
-                    <h3>BTX (Balanced Technology eXtended)</h3>
-                    <ul>
-                        <li>Designed as ATX replacement</li>
-                        <li>Improved CPU airflow design</li>
-                        <li>Uses thermal module instead of heatsink fan</li>
-                        <li>Reversed back panel orientation</li>
-                        <li>Mainly used by Dell</li>
-                    </ul>
+                             <div class="form-factor-card">
+                   <h2>Balanced Technology eXtended(BTX)</h2>
+<p>The BTX form factor was designed as a replacement for the ATX form factor. It did not gain widespread adoption.</p>    
+                              <br>
+                              <p>BTX Form Factor:</p>
+                              <ul>
+                        <li>The CPU is positioned in such a way that air flow is increased.</li>
+                               <li>There is no heatsink fan. Instead, a thermal module or shroud fits over the CPU to move heat directly out of the system.</li> 
+                              <li>The back panel orientation and mounting location is reversed.</li>
+                              </ul>
                 </div>
 
                 <h2>Computer Cases</h2>
@@ -191,7 +204,7 @@
                     </div>
 
                     <div class="case-card">
-                        <h3>HTPC Case</h3>
+                        <h3>Home theatre PC (HTPC)</h3>
                         <p>Media center focused:</p>
                         <ul>
                             <li>Designed for TV connection</li>
@@ -214,12 +227,12 @@
                 <div class="case-card">
                     <h3>Standard Included Components</h3>
                     <ul>
-                        <li>Computer case chassis</li>
-                        <li>Power supply (sometimes sold separately)</li>
-                        <li>Case fans</li>
-                        <li>Plastic or rubber feet</li>
-                        <li>Mounting screws and standoffs</li>
-                        <li>External connectors (audio, USB, FireWire)</li>
+                        <li>Computer case.</li>
+                        <li>Power supply (sometimes sold separately).</li>
+                        <li>Case fans.</li>
+                        <li>Plastic or rubber feet that attach to the bottom of the case.</li>
+                        <li>Mounting screws and standoffs.</li>
+                        <li>Additional external connectors (such as audio, USB, and FireWire) that connect to motherboard headers.</li>
                     </ul>
                 </div>
             </div>
