--- a/motherboards.html
+++ b/motherboards.html
@@ -33,7 +33,7 @@
         <a href="motherboards.html" class="component-link">
             <div class="component-box">Motherboards</div>
         </a>
-        <a href="bios.html" class="component-link">
+        <a href="Bios.html" class="component-link">
             <div class="component-box">BIOS/UEFI</div>
         </a>
         <a href="#memory" class="component-link">
