--- a/Bios.html
+++ b/Bios.html
@@ -57,7 +57,7 @@
             <div class="info-section">
                 <h2>Introduction</h2>
 <p>The following table describes Unified Extensible Firmware Interface (UEFI), Basic Input/Output System (BIOS), Electrically Erasable Programmable Read-Only Memory (EEPROM), and Complementary Metal-Oxide Semiconductor (CMOS).</p>
-                <img src="bios.png" alt="BIOS" class="section-image">
+                <img src="Bios.png" alt="BIOS" class="section-image">
                 
                 <h2>Component Descriptions</h2>
            
