--- a/motherboards.html
+++ b/motherboards.html
@@ -36,7 +36,7 @@
         <a href="Bios.html" class="component-link">
             <div class="component-box">BIOS/UEFI</div>
         </a>
-        <a href="#memory" class="component-link">
+        <a href="Memory.html" class="component-link">
             <div class="component-box">Memory</div>
         </a>
         <a href="#cpu" class="component-link">
