--- a/Bios.html
+++ b/Bios.html
@@ -36,19 +36,19 @@
         <a href="Bios.html" class="component-link">
             <div class="component-box">BIOS/UEFI</div>
         </a>
-        <a href="#memory" class="component-link">
+        <a href="Memory.html" class="component-link">
             <div class="component-box">Memory</div>
         </a>
-        <a href="#cpu" class="component-link">
+        <a href="CPU.html" class="component-link">
             <div class="component-box">Processors (CPUs)</div>
         </a>
-        <a href="#video" class="component-link">
+        <a href="Expansion.html" class="component-link">
             <div class="component-box">Video Cards</div>
         </a>
-        <a href="#cooling" class="component-link">
+        <a href="Cooling.html" class="component-link">
             <div class="component-box">Cooling</div>
         </a>
-        <a href="#power" class="component-link">
+        <a href="Power.html" class="component-link">
             <div class="component-box">Power Supply</div>
         </a>
      </div>
