--- a/components.html
+++ b/components.html
@@ -39,7 +39,7 @@
         <a href="Memory.html" class="component-link">
             <div class="component-box">Memory</div>
         </a>
-        <a href="#cpu" class="component-link">
+        <a href="CPU.html" class="component-link">
             <div class="component-box">Processors (CPUs)</div>
         </a>
         <a href="#video" class="component-link">
