--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              <ul>
                  <li><a href="index.html">Home</a></li>
                  <li><a href="components.html">Components</a></li>
-                 <li><a href="#">Summary</a></li>
+                 <li><a href="Summary.html">Summary</a></li>
              </ul>
          </nav>
      </div>
