--- a/components.html
+++ b/components.html
@@ -24,6 +24,34 @@
              </ul>
          </nav>
      </div>
+   <div class="page-container">
+     <div class="components-nav">
+        <h2>Components</h2>
+        <a href="casesandFF.html" class="component-link">
+            <div class="component-box">Cases and Form Factors</div>
+        </a>
+        <a href="motherboards.html" class="component-link">
+            <div class="component-box">Motherboards</div>
+        </a>
+        <a href="Bios.html" class="component-link">
+            <div class="component-box">BIOS/UEFI</div>
+        </a>
+        <a href="Memory.html" class="component-link">
+            <div class="component-box">Memory</div>
+        </a>
+        <a href="#cpu" class="component-link">
+            <div class="component-box">Processors (CPUs)</div>
+        </a>
+        <a href="#video" class="component-link">
+            <div class="component-box">Video Cards</div>
+        </a>
+        <a href="#cooling" class="component-link">
+            <div class="component-box">Cooling</div>
+        </a>
+        <a href="#power" class="component-link">
+            <div class="component-box">Power Supply</div>
+        </a>
+     </div>
  
    
       <div class="component-content">
