--- a/components.html
+++ b/components.html
@@ -64,7 +64,7 @@
             <li>Have an amazing experience learning about the different components of computers!</li>
            </ul>
          <h3>Don't worry, you don't have to come back here if you want to learn about something else!
-        <be> The components menu bar will always be on the right side.</h3>
+        <br> The components menu bar will always be on the right side.</h3>
             </div>
                 
             </div>
