--- a/components.html
+++ b/components.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <link rel="stylesheet" href="summary.css">
+ <link rel="stylesheet" href="components.css">
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
  <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie:regular" rel="stylesheet" />
@@ -39,16 +39,16 @@
         <a href="Memory.html" class="component-link">
             <div class="component-box">Memory</div>
         </a>
-        <a href="#cpu" class="component-link">
+        <a href="CPU.html" class="component-link">
             <div class="component-box">Processors (CPUs)</div>
         </a>
-        <a href="#video" class="component-link">
+        <a href="Expansion.html" class="component-link">
             <div class="component-box">Video Cards</div>
         </a>
-        <a href="#cooling" class="component-link">
+        <a href="Cooling.html" class="component-link">
             <div class="component-box">Cooling</div>
         </a>
-        <a href="#power" class="component-link">
+        <a href="Power.html" class="component-link">
             <div class="component-box">Power Supply</div>
         </a>
      </div>
