--- a/Cooling.html
+++ b/Cooling.html
@@ -20,7 +20,7 @@
              <ul>
                  <li><a href="index.html">Home</a></li>
                  <li><a href="components.html">Components</a></li>
-                 <li><a href="#">Summary</a></li>
+                 <li><a href="Summary.html">Summary</a></li>
              </ul>
          </nav>
      </div>
@@ -45,10 +45,10 @@
         <a href="Expansion.html" class="component-link">
             <div class="component-box">Video Cards</div>
         </a>
-        <a href="#cooling" class="component-link">
+        <a href="Cooling.html" class="component-link">
             <div class="component-box">Cooling</div>
         </a>
-        <a href="#power" class="component-link">
+        <a href="Power.html" class="component-link">
             <div class="component-box">Power Supply</div>
         </a>
      </div>
