--- a/casesandFF.html
+++ b/casesandFF.html
@@ -234,6 +234,11 @@
                         <li>Mounting screws and standoffs.</li>
                         <li>Additional external connectors (such as audio, USB, and FireWire) that connect to motherboard headers.</li>
                     </ul>
+
+                 <h2>Video!</h2>
+                   <video width="500px" height="400px" controls>
+        <source src="casesandforms.mp4" type="video/mp4">
+    </video>
                 </div>
             </div>
         </div>
