--- a/motherboards.html
+++ b/motherboards.html
@@ -177,6 +177,14 @@ Selecting a motherboard with integrated devices is typically cheaper than buying
                  <p>A motherboard's support manual is an excellent source of information. Support manuals contain technical specifications as well as diagrams that identify the motherboard's components.<br>
 
 To ensure compatibility, always check the motherboard documentation whenever you are upgrading, customizing, or replacing components. If you don't have the motherboard support manual, check the manufacturer's website.</p>
+
+                     <h2>Video!</h2>
+  <video width="500px" height="400px" controls>
+        <source src="motherboards2 (1).mp4" type="video/mp4">
+    </video>
+                     
+                     
+   
                 </div>
             </div>
         </div>
