--- a/Expansion.html
+++ b/Expansion.html
@@ -93,6 +93,11 @@
 <li>Are used in cryptocurrency mining.</li>
 <li>Allow multiple cards to be connected. This is called daisy chaining.</li>
                   </ul>
+
+                         <h2>Video!</h2>
+  <video width="500px" height="400px" controls>
+        <source src="Processor (1).mp4" type="video/mp4">
+    </video>
                  </div>
        
             </div>
