--- a/CPU.html
+++ b/CPU.html
@@ -111,6 +111,10 @@
               <li>You should also check for a corrupt file in the software.</li> 
              </ul>
             </div>
+               <h2>Video!</h2>
+  <video width="500px" height="400px" controls>
+        <source src="Processor (1).mp4" type="video/mp4">
+    </video>
        
    
                 </div>
