--- a/Expansion.html
+++ b/Expansion.html
@@ -96,7 +96,7 @@
 
                          <h2>Video!</h2>
   <video width="500px" height="400px" controls>
-        <source src="Processor (1).mp4" type="video/mp4">
+        <source src="Slots (1).mp4" type="video/mp4">
     </video>
                  </div>
        
