--- a/Cooling.html
+++ b/Cooling.html
@@ -85,6 +85,11 @@
 <li>Leave space between the computer and any walls or desks.</li>
 <li>Preserve negative pressure inside the case by keeping all covers and shields installed (e.g., unused expansion cards, I/O shield, front drive bays).</li>
 </ul>
+
+    <h2>Video!</h2>
+  <video width="500px" height="400px" controls>
+        <source src="Cooling (1).mp4" type="video/mp4">
+    </video>
               </div>
        
             </div>
