--- a/Power.html
+++ b/Power.html
@@ -104,6 +104,11 @@
 <li>Never open or disassemble a power supply. Always replace the entire unit.</li></ul></li>
 
                   </ul>
+             <h2>Video!</h2>
+  <video width="500px" height="400px" controls>
+        <source src="Power (1).mp4" type="video/mp4">
+    </video>
+
                 </div>
 
       </div>
