--- a/Summary.html
+++ b/Summary.html
@@ -41,7 +41,7 @@
                 <div class="case-types">
                     <div class="case-card">
                         <h3>GCFGlobal – Inside a Computer:</h3>
-                       <a href="https://edu.gcfglobal.org/en/computerbasics/inside-a-computer/1/" target="_blank">Press here!/a>
+                       <a href="https://edu.gcfglobal.org/en/computerbasics/inside-a-computer/1/" target="_blank">Press here!</a>
                     </div>
 
                     <div class="case-card">
